[project]
name = "clonefile-dedup"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuji Shingai",email = "yuji_shingai@epics.jp"}
]
readme = "README.md"
requires-python = ">=3.7,<3.8"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "xattr (<1.1.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
